# repolist

./: README.rst  pyproject.toml  repolist.py  tox.ini
.github/workflows/: test.yml
src/repolist/: __init__.py  __main__.py
