[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repolist"
dynamic = ["version"]
description = "List & filter GitHub repositories"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "repolist@varonathe.org" }
]

keywords = [
    "GitHub",
    "GitHub repositories",
    "GitHub repository management",
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "click ~= 8.0",
    "ghreq >= 0.1.1, < 1.0",
    "ghtoken ~= 0.1",
]

[project.scripts]
repolist = "repolist.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/repolist"
"Bug Tracker" = "https://github.com/jwodder/repolist/issues"

[tool.hatch.version]
path = "src/repolist/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "setup.cfg",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
